デリゲートを使用してデータを受け取りを実装

--- a/PageTransition/Views/Second.storyboard
+++ b/PageTransition/Views/Second.storyboard
@@ -44,11 +44,19 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="secondDetail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IN1-hN-K3c">
+                                <rect key="frame" x="62" y="527" width="246" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ecA-eN-ozM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="backSecondTextLabel" destination="IN1-hN-K3c" id="cb8-3R-R16"/>
                         <outlet property="fileNameField" destination="eLH-rk-1HW" id="Hik-Th-Oid"/>
                         <outlet property="secondTextField" destination="v5A-iI-nJ7" id="mvZ-H4-AqP"/>
                     </connections>
