viewDidLoadについて考察

--- a/PageTransition/Views/Practice/Base.lproj/Main.storyboard
+++ b/PageTransition/Views/Practice/Base.lproj/Main.storyboard
@@ -30,6 +30,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nNt-Nf-e8r">
+                                <rect key="frame" x="107" y="431" width="108" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="todopageへ"/>
+                                <connections>
+                                    <action selector="goToTodoPage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yfu-ts-pg5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
